Updated the printing code and command line interface. Not sure if it works yet.